[gd_scene load_steps=3 format=3 uid="uid://cmrvspor0n2h2"]

[ext_resource type="Script" path="res://scripts/text_box.gd" id="1_6qlge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o0s2m"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="TextBox" type="CanvasLayer"]
script = ExtResource("1_6qlge")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -256.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o0s2m")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="LabelNama" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 30
text = "Char_name"

[node name="LabelText" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(1072, 91)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
text = "DWAIDddddddddddddddddddddddddddddddddddddddddddddddddddddddddd dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd"
autowrap_mode = 3
clip_text = true

[node name="LabelSymbol" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 40
text = "->"

[node name="LetterDisplayTimer" type="Timer" parent="MarginContainer"]
one_shot = true

[connection signal="timeout" from="MarginContainer/LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
